# RUST

./: LEARNING_RUST.md  README.md  roadmap.md
fetch/: Cargo.toml  files.db
fetch/fetch/: Cargo.toml
fetch/fetch/src/: main.rs
fetch/src/: db.rs  main.rs
functions/src/: factorial.rs  meth.rs  shapes.rs
learning/cargo/01_cargo_prj/o_prj/: Cargo.toml
learning/cargo/01_cargo_prj/o_prj/src/: main.rs
learning/cargo/o1_prj/: Cargo.toml
learning/simp_code/: 01_hello_world  01_hello_world.rs  RUN.md
learning_rust_00/: .gitignore  Cargo.toml
learning_rust_00/src/: main.rs
learning_rust_01/: .gitignore  Cargo.toml
learning_rust_01/src/: cust_lib.rs  main.rs
learning_rust_02/: .gitignore  Cargo.toml
learning_rust_02/src/: factorial.rs  get_input.rs  main.rs  printing_pattern.rs
rust_00/: Cargo.toml
rust_00/src/: main.rs  object.rs
rust_cli_game/: .gitignore  Cargo.toml
rust_cli_game/src/: main.rs
src/: is_even.rs  main.rs  person.rs  print_length.rs  printable.rs  shapes.rs  sum_list.rs
user_store/: Cargo.toml  files.db
user_store/src/: db.rs  main.rs
